src/test/deca/context/invalid/divide_undefvar_divide_int_context.deca
// Description :
//
//      Test contextuellement incorrect de la division de la variable stockant la division sans définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= y/ 2;
}